basic landing page styles

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -1,1 +1,23 @@
-<h1>Index View</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Group Library</title>
+    <link rel="stylesheet" href="../css/simple-grid.min.css">
+    <link rel="stylesheet" href="../css/main.css">
+  </head>
+  <body>
+    <%- include navbar -%>
+
+    <section class="hero">
+      <div class="container hero-container">
+        <div class="container hero-text">
+          <h2 class="hero-header">Make sharing books easy</h2>
+          <h4 class="hero-msg">We make it simple to keep track of books you share so you can focus on other things, like reading</h4>
+        </div>
+        <button class="hero-btn btn">Get Started</button>
+      </div>
+    </section>
+
+  </body>
+</html>
