--- a/public/css/main.css
+++ b/public/css/main.css
@@ -74,7 +74,7 @@ a {
 
 /* Index page */
 .hero {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   background-image: url('../images/andrew-branch-180244.jpg');
   background-size: cover;
