--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -5,6 +5,9 @@
     <title>Group Library</title>
     <link rel="stylesheet" href="../css/simple-grid.min.css">
     <link rel="stylesheet" href="../css/main.css">
+
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script defer src="../js/main.js"></script>
   </head>
   <body>
     <%- include navbar -%>
