--- a/public/css/main.css
+++ b/public/css/main.css
@@ -116,3 +116,78 @@ a {
   width: 225px;
   background-color: #1dcaff;
 }
+
+/* Login page */
+.login-page {
+  width: 100%;
+  height: 100vh;
+
+  background-image: url('../images/john-mark-kuznietsov-266553.jpg');
+  background-size: cover;
+  background-position: bottom;
+
+  display: flex;
+  display: -webkit-flex;
+
+  align-items: center;
+  justify-content: center;
+}
+
+.login-info-container {
+  padding: 40px 20px 40px 20px;
+  height: 500px;
+  width: 700px;
+  background-color: rgba(255,255,255, .85);
+  border-radius: 30px;
+
+  display: flex;
+  display: -webkit-flex;
+
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  align-items: center;
+}
+
+.login-info-container>h2 {
+  font-size: 38px;
+  margin-bottom: 25px;
+}
+
+.login-error-container {
+  height: 35px;
+  margin-bottom: 25px;
+}
+
+.login-info-container>form {
+  display: flex;
+  display: -webkit-flex;
+  width: 100%;
+
+  -webkit-flex-direction: column;
+  flex-direction: column;
+
+  align-items: center;
+}
+
+.login-info-container>form>input {
+  padding: 5px 0 5px 0;
+  color: #878787;
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.login-info-container>form>input[type="submit"] {
+  color: white;
+  width: 300px;
+  height: 50px;
+}
+
+.login-info-container>a {
+  color: #007bff;
+}
+
+.login-error-msg {
+  color: #d9534f;
+}
