--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -26,8 +26,8 @@
         </div>
 
         <form class="login-form" action="/login" method="post">
-          <input type="text" name="username" value="username">
-          <input type="text" name="password" value="password">
+          <input type="text" name="username" placeholder="username">
+          <input type="text" name="password" placeholder="password">
           <input class="btn" type="submit" value="Login">
         </form>
 
