--- a/public/views/signup.ejs
+++ b/public/views/signup.ejs
@@ -1,8 +1,39 @@
-<h1>Signup view</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Signup - GroupLibrary</title>
+    <link rel="stylesheet" href="../css/simple-grid.min.css">
+    <link rel="stylesheet" href="../css/main.css">
 
-<form action="/signup" method="post">
-  <input type="text" name="username" value="username">
-  <input type="password" name="password" value="password">
-  <input type="email" name="email" value="email">
-  <input type="submit" value="signup">
-</form>
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script defer src="../js/main.js"></script>
+  </head>
+  <body>
+    <%- include navbar -%>
+    
+    <section class="signup-page">
+      <div class="signup-info-container">
+
+        <h2>Signup</h2>
+
+        <div class="signup-error-container">
+          <% if(errors) { %>
+          <p class="signup-error-msg">
+          <%= errors %>
+          </p>
+          <% } %>
+        </div>
+
+        <form class="signup-form" action="/signup" method="post">
+          <input type="text" name="username" placeholder="username">
+          <input type="email" name="email" placeholder="email@address">
+          <input type="password" name="password" placeholder="password">
+          <input class="btn" type="submit" value="Signup">
+        </form>
+
+        <a href="/login">Already have an account? Login here.</a>
+      </div>
+    </section>
+  </body>
+</html>
