--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -27,7 +27,7 @@
 
         <form class="login-form" action="/login" method="post">
           <input type="text" name="username" placeholder="username">
-          <input type="text" name="password" placeholder="password">
+          <input type="password" name="password" placeholder="password">
           <input class="btn" type="submit" value="Login">
         </form>
 
