--- a/public/views/navbar.ejs
+++ b/public/views/navbar.ejs
@@ -7,8 +7,8 @@
        logoRedirect = '/dashboard'
        }%>
        <a href="<%= logoRedirect %>">
-      <h1 class="logo">Group Library</h1>
-    </a>
+        <h1 class="logo">Group Library</h1>
+      </a>
   </div>
 
   <div class="nav-right">
@@ -17,6 +17,10 @@
       <button class="login-btn btn">Login</button>
       <button class="signup-btn btn">Signup</button>
     </div>
-    <% } %>
+    <% }else if(User) {%>
+    <div class="nav-loggedIn">
+      <button class="btn signout-btn">Signout</button>
+    </div>
+    <% }%>
   </div>
 </section>
