--- a/public/views/dashboard.ejs
+++ b/public/views/dashboard.ejs
@@ -29,9 +29,11 @@
                   <li><p>You don't have any groups, create or join one to get started</p></li>
                   <% }%>
                 </ul>
+
+                <button class="btn new-group-btn">New Group</button>
               </div>
 
-              <div class="col-4 dash-item">
+              <div overflow="auto" class="col-4 dash-item">
                 <h2>Your Collection</h2>
               </div>
 
