--- a/public/css/main.css
+++ b/public/css/main.css
@@ -87,6 +87,35 @@ li {
   flex-direction: row;
 }
 
+.nav-loggedIn {
+  display: flex;
+  display: -webkit-flex;
+  width: 200px;
+}
+
+.nav-loggedIn>h2 {
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+}
+
+.nav-dropdown {
+  width:  50px;
+  height: 50px;
+  display: flex;
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  justify-content: space-between;
+
+}
+
+
+.nav-drop-line {
+  width: 100%;
+  height: 8px;
+  background-color: #ffffff;
+}
+
 /* Index page */
 .hero {
   height: 100%;
@@ -433,4 +462,45 @@ li {
   bottom: 0;
   margin-bottom: 45px;
   font-size: 18px;
+}
+
+.invite-container {
+  border: 1px solid #cccccc;
+  padding: 10px;
+}
+
+.invite-container>p {
+  font-size: 14px;
+  font-style: italic;
+}
+
+.invite-name {
+  color: #433e90;
+}
+
+.invite-container>form>input[type="submit"] {
+  width: 80px;
+}
+
+.invite-btn-container {
+  display: flex;
+  display: -webkit-flex;
+
+  justify-content: space-between;
+  -webkit-justify-content: space-between;
+}
+
+/* group view */
+.group{
+  width: 100%;
+  height: 100vh;
+  background-image: url('../images/playstation-pattern.png');
+}
+
+.group-container{
+  width: 100%;
+  height: 640px;
+  background-color: rgba(255, 255, 255, .4);
+  margin: 100px 0 50px 0;
+  box-shadow: 1px 1px 10px #cccccc;
 }
