--- a/public/css/main.css
+++ b/public/css/main.css
@@ -504,3 +504,40 @@ li {
   margin: 100px 0 50px 0;
   box-shadow: 1px 1px 10px #cccccc;
 }
+
+.group-users-list {
+  height: 450px;
+  border-right: 1px solid #cccccc;
+}
+
+.group-users-list>h3 {
+  margin-bottom: 20px;
+}
+
+.group-users-list>ul>li>a {
+  color: #007D9B;
+}
+
+.group-books-available {
+  height: 450px;
+  border-right: 1px solid #cccccc;
+}
+
+.add-book-to-group-list {
+  display: none;
+  position: absolute;
+  background-color: #ffffff;
+  box-shadow: 1px 1px 5px #DADADA;
+  width: 550px;
+  height: 650px;
+  left: 50%;
+  top: 50%;
+  margin-top: -325px;
+  margin-left: -225px;
+}
+
+.add-book-to-group-cancel-btn {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 25px;
+}
