--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,6 +23,10 @@ li {
   list-style: none;
 }
 
+body {
+  background-image: url('../images/playstation-pattern.png');
+}
+
 .btn {
   background-color: #007bff;
   border: none;
@@ -540,4 +544,11 @@ li {
   position: absolute;
   bottom: 0;
   margin-bottom: 25px;
+}
+
+/* Book view */
+.book {
+  width: 100%;
+  height: 100vh;
+  padding-top: 100px;
 }
