--- a/public/views/book.ejs
+++ b/public/views/book.ejs
@@ -1,12 +1,37 @@
-<h1>book view</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title><%= Book.title%></title>
+    <link rel="stylesheet" href="/../css/simple-grid.min.css">
+    <link rel="stylesheet" href="/../css/main.css">
 
-<h2><%= Book.title%></h2>
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script defer src="../js/main.js"></script>
+  </head>
+  <body>
+    <%- include navbar -%>
 
-<h3><%= Book.author%></h3>
-
-<h3><%= Book.description%></h3>
-<%= Book %>
-
-<form action="/request-to-borrow-book/<%= Book._id%>/<%= Book.group.id%>/<%= Book.owner._id %>" method="post">
-  <input type="submit" value="request to borrow">
-</form>
+    <section class="book">
+        <div class="col-12">
+          <div class="row">
+            <div class="container">
+              <h2><%= Book.title %></h2>
+              <h4>by: <%= Book.author%></h4>
+              <h4>owner: <%= Book.owner.name%></h4>
+              <h4>borrowed by: <%= Book.borrower%></h4>
+              <p><%= Book.description %></p>
+            </div>
+          </div>
+          <div class="row">
+            <!-- need to fix this -->
+            <% if(Book.group && Book.owner._id != User._id) { %>
+              <form action="/request-to-borrow-book/<%= Book._id%>/<%= Book.group.id%>/<%= Book.owner._id%>">
+                <input type="submit" value="Request to borrow">
+              </form>
+            <% } %>
+          </div>
+        </div>
+    </section>
+  </body>
+</html>
