--- a/public/views/dashboard.ejs
+++ b/public/views/dashboard.ejs
@@ -77,6 +77,7 @@
                   </li>
                   <% })%>
 
+                  <% if(User.borrowRequests.length > 0) { %>
                   <% User.borrowRequests.forEach(function(request) { %>
                     <li>
                       <div class="borrow-request-container">
@@ -90,6 +91,7 @@
                       </div>
                     </li>
                   <% }) %>
+                  <% } %>
                 </ul>
 
               </div>
