added return feature

--- a/public/views/book.ejs
+++ b/public/views/book.ejs
@@ -25,10 +25,15 @@
           </div>
           <div class="row">
             <!-- need to fix this -->
-            <% if(Book.group && Book.owner._id != User._id) { %>
+            <% if(Book.owner._id != User._id && !Book.borrower && Book.group) { %>
               <form action="/request-to-borrow-book/<%= Book._id%>/<%= Book.group.id%>/<%= Book.owner._id%>" method="post">
                 <input type="submit" value="Request to borrow">
               </form>
+            <% } %>
+            <% if(Book.borrower == User.username) { %>
+                <form action="/return/<%= Book._id%>/<%= Book.owner._id%>/<%= User._id%>" method="post">
+                  <input type="submit" class="btn" value="Return book">
+                </form>
             <% } %>
           </div>
         </div>
