--- a/public/views/group.ejs
+++ b/public/views/group.ejs
@@ -32,7 +32,7 @@
 
             <div class="row">
               <div class="col-12">
-                <div class="col-2">
+                <div class="col-2 group-dash">
                   <div overflow="auto" class="group-users-list">
                     <h3>Members</h3>
                     <ul>
@@ -43,21 +43,24 @@
                   </div>
                 </div>
 
-                <div class="col-8">
-                  <div overflow="auto" class="group-books-available">
+                <div class="col-8 group-dash">
+                  <div class="group-books-available">
                     <h3>Available Books</h3>
+                    <div class="group-books-container">
+                      <ul>
+                        <% Group.books.forEach(function(book) { %>
+                          <%= book %>
+                          <% if(!book.borrower) {  %>
+                            <li><a href="/book/<%= book._id%>/<%= book.owner._id%>"><%= book.title %> by: <%= book.author %></a></li>
+                            <% } %>
+                            <% }) %>
+                          </ul>
+                        </div>
                     <button type="button" name="button" class="btn add-book-to-group-btn"> Add a a book to the group</button>
-                    <ul>
-                      <% Group.books.forEach(function(book) { %>
-                      <% if(!book.borrower) {  %>
-                        <li><a href="/book/<%= book._id%>/<%= book.owner._id%>"><%= book.title %> by: <%= book.author %></a></li>
-                        <% } %>
-                        <% }) %>
-                      </ul>
                   </div>
                 </div>
 
-                <div class="col-2">
+                <div class="col-2 group-dash">
                   <h3>Borrowed Books</h3>
                   <ul>
                       <% Group.books.forEach(function(book) { %>
